fix (./web/): remove scrollbar and fix size of some pages

--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,19 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* width */
-::-webkit-scrollbar {
-    width: 8px;
-}
-  
-/* Track */
-::-webkit-scrollbar-track {
-    background: white;
-}
-  
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 5px;
-}
